rerun fitting in mutation_rate nb

--- a/notebooks/mutation_rate.ipynb
+++ b/notebooks/mutation_rate.ipynb
@@ -63,9 +63,10 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>library</th>\n",
-       "      <th>aa_substitutions</th>\n",
+       "      <th>barcode</th>\n",
        "      <th>concentration</th>\n",
        "      <th>prob_escape</th>\n",
+       "      <th>aa_substitutions</th>\n",
        "      <th>IC90</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -73,41 +74,46 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>avg1muts</td>\n",
-       "      <td></td>\n",
+       "      <td>AAAAACGCGGTCACTT</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.087480</td>\n",
+       "      <td>0.08748</td>\n",
+       "      <td></td>\n",
        "      <td>0.1128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>avg1muts</td>\n",
-       "      <td></td>\n",
+       "      <td>AAAAAGCACCATAACG</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.034240</td>\n",
+       "      <td>0.03424</td>\n",
+       "      <td></td>\n",
        "      <td>0.1128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>avg1muts</td>\n",
-       "      <td></td>\n",
+       "      <td>AAAAAGGGAGCTAAAC</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.037880</td>\n",
+       "      <td>0.03788</td>\n",
+       "      <td></td>\n",
        "      <td>0.1128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>avg1muts</td>\n",
-       "      <td></td>\n",
+       "      <td>AAAAAGTCGGATGGGC</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.035730</td>\n",
+       "      <td>0.03573</td>\n",
+       "      <td></td>\n",
        "      <td>0.1128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>avg1muts</td>\n",
-       "      <td></td>\n",
+       "      <td>AAAAAGTCTTAGGGAA</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td></td>\n",
        "      <td>0.1128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -117,67 +123,86 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>359995</th>\n",
-       "      <td>avg2muts</td>\n",
-       "      <td>Y473E L518F D427L</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>0.002918</td>\n",
-       "      <td>1.1600</td>\n",
+       "      <td>avg4muts</td>\n",
+       "      <td>GGGAAATTAGACTTTC</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.03703</td>\n",
+       "      <td>Y508W C525F</td>\n",
+       "      <td>0.4073</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>359996</th>\n",
-       "      <td>avg1muts</td>\n",
-       "      <td>Y473S G413Q</td>\n",
+       "      <td>avg4muts</td>\n",
+       "      <td>GGGAAATTAGACTTTC</td>\n",
        "      <td>4.00</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.5780</td>\n",
+       "      <td>0.03618</td>\n",
+       "      <td>Y508W C525F</td>\n",
+       "      <td>0.4073</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>359997</th>\n",
-       "      <td>avg1muts</td>\n",
-       "      <td>Y473V P479R F392W</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>0.160200</td>\n",
-       "      <td>1.4550</td>\n",
+       "      <td>avg4muts</td>\n",
+       "      <td>GCCACGTTGCAATTCA</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25930</td>\n",
+       "      <td>Y508W G526L</td>\n",
+       "      <td>0.4122</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>359998</th>\n",
-       "      <td>avg3muts</td>\n",
-       "      <td>Y489Q N501Y</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.5881</td>\n",
+       "      <td>avg4muts</td>\n",
+       "      <td>GCCACGTTGCAATTCA</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>Y508W G526L</td>\n",
+       "      <td>0.4122</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>359999</th>\n",
-       "      <td>avg2muts</td>\n",
-       "      <td>Y505N H519T</td>\n",
+       "      <td>avg4muts</td>\n",
+       "      <td>GCCACGTTGCAATTCA</td>\n",
        "      <td>4.00</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.3505</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>Y508W G526L</td>\n",
+       "      <td>0.4122</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>360000 rows × 5 columns</p>\n",
+       "<p>360000 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         library   aa_substitutions  concentration  prob_escape    IC90\n",
-       "0       avg1muts                              0.25     0.087480  0.1128\n",
-       "1       avg1muts                              0.25     0.034240  0.1128\n",
-       "2       avg1muts                              0.25     0.037880  0.1128\n",
-       "3       avg1muts                              0.25     0.035730  0.1128\n",
-       "4       avg1muts                              0.25     0.000000  0.1128\n",
-       "...          ...                ...            ...          ...     ...\n",
-       "359995  avg2muts  Y473E L518F D427L           4.00     0.002918  1.1600\n",
-       "359996  avg1muts        Y473S G413Q           4.00     0.000000  0.5780\n",
-       "359997  avg1muts  Y473V P479R F392W           4.00     0.160200  1.4550\n",
-       "359998  avg3muts        Y489Q N501Y           4.00     0.000000  0.5881\n",
-       "359999  avg2muts        Y505N H519T           4.00     0.000000  0.3505\n",
+       "         library           barcode  concentration  prob_escape  \\\n",
+       "0       avg1muts  AAAAACGCGGTCACTT           0.25      0.08748   \n",
+       "1       avg1muts  AAAAAGCACCATAACG           0.25      0.03424   \n",
+       "2       avg1muts  AAAAAGGGAGCTAAAC           0.25      0.03788   \n",
+       "3       avg1muts  AAAAAGTCGGATGGGC           0.25      0.03573   \n",
+       "4       avg1muts  AAAAAGTCTTAGGGAA           0.25      0.00000   \n",
+       "...          ...               ...            ...          ...   \n",
+       "359995  avg4muts  GGGAAATTAGACTTTC           1.00      0.03703   \n",
+       "359996  avg4muts  GGGAAATTAGACTTTC           4.00      0.03618   \n",
+       "359997  avg4muts  GCCACGTTGCAATTCA           0.25      0.25930   \n",
+       "359998  avg4muts  GCCACGTTGCAATTCA           1.00      0.00000   \n",
+       "359999  avg4muts  GCCACGTTGCAATTCA           4.00      0.00000   \n",
        "\n",
-       "[360000 rows x 5 columns]"
+       "       aa_substitutions    IC90  \n",
+       "0                        0.1128  \n",
+       "1                        0.1128  \n",
+       "2                        0.1128  \n",
+       "3                        0.1128  \n",
+       "4                        0.1128  \n",
+       "...                 ...     ...  \n",
+       "359995      Y508W C525F  0.4073  \n",
+       "359996      Y508W C525F  0.4073  \n",
+       "359997      Y508W G526L  0.4122  \n",
+       "359998      Y508W G526L  0.4122  \n",
+       "359999      Y508W G526L  0.4122  \n",
+       "\n",
+       "[360000 rows x 6 columns]"
       ]
      },
      "execution_count": 2,
@@ -239,10 +264,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model on data with 1 average mutations was already fit.\n",
-      "Model on data with 2 average mutations was already fit.\n",
-      "Model on data with 3 average mutations was already fit.\n",
-      "Model on data with 4 average mutations was already fit.\n"
+      "Model on data with 1 average mutations fit and saved.\n",
+      "Model on data with 2 average mutations fit and saved.\n",
+      "Model on data with 3 average mutations fit and saved.\n",
+      "Model on data with 4 average mutations fit and saved.\n"
      ]
     }
    ],
@@ -353,18 +378,18 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-70b4b7f2749943d49cfd15bc95e59978\"></div>\n",
+       "<div id=\"altair-viz-0aff11ef8b14415296bcf98428925b26\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-70b4b7f2749943d49cfd15bc95e59978\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-70b4b7f2749943d49cfd15bc95e59978\");\n",
+       "    if (outputDiv.id !== \"altair-viz-0aff11ef8b14415296bcf98428925b26\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-0aff11ef8b14415296bcf98428925b26\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
-       "      \"vega-lite\": \"https://cdn.jsdelivr.net/npm//vega-lite@4.17.0?noext\",\n",
+       "      \"vega-lite\": \"https://cdn.jsdelivr.net/npm//vega-lite@5.2.0?noext\",\n",
        "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n",
        "    };\n",
        "\n",
@@ -400,12 +425,12 @@
        "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
        "    } else {\n",
        "      maybeLoadScript(\"vega\", \"5\")\n",
-       "        .then(() => maybeLoadScript(\"vega-lite\", \"4.17.0\"))\n",
+       "        .then(() => maybeLoadScript(\"vega-lite\", \"5.2.0\"))\n",
        "        .then(() => maybeLoadScript(\"vega-embed\", \"6\"))\n",
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-2555fa9df6f7d7be339497e2c7c5928c\"}, \"mark\": {\"type\": \"circle\", \"size\": 125}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"legend\": null, \"type\": \"nominal\"}, \"column\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"mutation_rate\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"mutation_rate\", \"sort\": {\"field\": \"x\", \"order\": \"descending\"}, \"type\": \"ordinal\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"height\": 200, \"title\": \"inferred vs. true mutation escape values\", \"width\": 200, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-2555fa9df6f7d7be339497e2c7c5928c\": [{\"epitope\": \"class 1\", \"correlation (R^2)\": 0.015430507003983296, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.7310292780457298, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.4434374408442581, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6652956779460807, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.914339449754478, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.86246127371308, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.7817413017718214, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9461688311931766, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9015842692046124, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.7886963171748558, \"mutation_rate\": \"avg4muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9408696899527026, \"mutation_rate\": \"avg4muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.919382326980428, \"mutation_rate\": \"avg4muts\"}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-cd1163d1a1de32843830cdaafc499aeb\"}, \"mark\": {\"type\": \"circle\", \"size\": 125}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"legend\": null, \"type\": \"nominal\"}, \"column\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"mutation_rate\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"mutation_rate\", \"sort\": {\"field\": \"x\", \"order\": \"descending\"}, \"type\": \"ordinal\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"height\": 200, \"title\": \"inferred vs. true mutation escape values\", \"width\": 200, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.2.0.json\", \"datasets\": {\"data-cd1163d1a1de32843830cdaafc499aeb\": [{\"epitope\": \"class 1\", \"correlation (R^2)\": 0.004985940885516334, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.5909947979881985, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 1.1906483649527809e-05, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6270592143850509, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9110537818210763, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.8511594377876831, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.7244790198100587, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9438943282002382, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.8928066673940255, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.7513478284252502, \"mutation_rate\": \"avg4muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.940805497333503, \"mutation_rate\": \"avg4muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9035728686443523, \"mutation_rate\": \"avg4muts\"}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
@@ -459,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
