make epitope colors consistent in mutation_rate nb

--- a/notebooks/mutation_rate.ipynb
+++ b/notebooks/mutation_rate.ipynb
@@ -264,10 +264,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model on data with 1 average mutations fit and saved.\n",
-      "Model on data with 2 average mutations fit and saved.\n",
-      "Model on data with 3 average mutations fit and saved.\n",
-      "Model on data with 4 average mutations fit and saved.\n"
+      "Model on data with 1 average mutations was already fit.\n",
+      "Model on data with 2 average mutations was already fit.\n",
+      "Model on data with 3 average mutations was already fit.\n",
+      "Model on data with 4 average mutations was already fit.\n"
      ]
     }
    ],
@@ -378,13 +378,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-0aff11ef8b14415296bcf98428925b26\"></div>\n",
+       "<div id=\"altair-viz-e8d6f93a06e34ead82c74477472ebb39\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-0aff11ef8b14415296bcf98428925b26\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-0aff11ef8b14415296bcf98428925b26\");\n",
+       "    if (outputDiv.id !== \"altair-viz-e8d6f93a06e34ead82c74477472ebb39\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-e8d6f93a06e34ead82c74477472ebb39\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -430,7 +430,7 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-cd1163d1a1de32843830cdaafc499aeb\"}, \"mark\": {\"type\": \"circle\", \"size\": 125}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"legend\": null, \"type\": \"nominal\"}, \"column\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"mutation_rate\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"mutation_rate\", \"sort\": {\"field\": \"x\", \"order\": \"descending\"}, \"type\": \"ordinal\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"height\": 200, \"title\": \"inferred vs. true mutation escape values\", \"width\": 200, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.2.0.json\", \"datasets\": {\"data-cd1163d1a1de32843830cdaafc499aeb\": [{\"epitope\": \"class 1\", \"correlation (R^2)\": 0.004985940885516334, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.5909947979881985, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 1.1906483649527809e-05, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6270592143850509, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9110537818210763, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.8511594377876831, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.7244790198100587, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9438943282002382, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.8928066673940255, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.7513478284252502, \"mutation_rate\": \"avg4muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.940805497333503, \"mutation_rate\": \"avg4muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9035728686443523, \"mutation_rate\": \"avg4muts\"}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-cd1163d1a1de32843830cdaafc499aeb\"}, \"mark\": {\"type\": \"circle\", \"size\": 125}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"legend\": null, \"scale\": {\"range\": [\"#1f77b4\", \"#ff7f0e\", \"#2ca02c\"]}, \"type\": \"nominal\"}, \"column\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"mutation_rate\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"mutation_rate\", \"sort\": {\"field\": \"x\", \"order\": \"descending\"}, \"type\": \"ordinal\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"height\": 200, \"title\": \"inferred vs. true mutation escape values\", \"width\": 200, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.2.0.json\", \"datasets\": {\"data-cd1163d1a1de32843830cdaafc499aeb\": [{\"epitope\": \"class 1\", \"correlation (R^2)\": 0.004985940885516334, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.5909947979881985, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 1.1906483649527809e-05, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6270592143850509, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9110537818210763, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.8511594377876831, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.7244790198100587, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9438943282002382, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.8928066673940255, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.7513478284252502, \"mutation_rate\": \"avg4muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.940805497333503, \"mutation_rate\": \"avg4muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9035728686443523, \"mutation_rate\": \"avg4muts\"}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
@@ -449,7 +449,7 @@
     "    y=\"correlation (R^2):Q\",\n",
     "    column=\"epitope:N\",\n",
     "    tooltip=[\"mutation_rate\", alt.Tooltip(\"correlation (R^2)\", format=\".3f\")],\n",
-    "    color=alt.Color(\"epitope\", legend=None),\n",
+    "    color=alt.Color(\"epitope\", scale=alt.Scale(range=['#1f77b4', '#ff7f0e', '#2ca02c']), legend=None),\n",
     ").properties(width=200, height=200, title=\"inferred vs. true mutation escape values\")"
    ]
   },
