make epitope colors consistent in library_size nb

--- a/notebooks/library_size.ipynb
+++ b/notebooks/library_size.ipynb
@@ -237,12 +237,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model with 1000 variants fit and saved.\n",
-      "Model with 2500 variants fit and saved.\n",
-      "Model with 5000 variants fit and saved.\n",
-      "Model with 10000 variants fit and saved.\n",
-      "Model with 20000 variants fit and saved.\n",
-      "Model with 30000 variants fit and saved.\n"
+      "Model with 1000 variants was already fit.\n",
+      "Model with 2500 variants was already fit.\n",
+      "Model with 5000 variants was already fit.\n",
+      "Model with 10000 variants was already fit.\n",
+      "Model with 20000 variants was already fit.\n",
+      "Model with 30000 variants was already fit.\n"
      ]
     }
    ],
@@ -357,13 +357,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-c21c68dda47842fd868b067c20750d8c\"></div>\n",
+       "<div id=\"altair-viz-3c8e62781515412988385ff6c89869e0\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-c21c68dda47842fd868b067c20750d8c\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-c21c68dda47842fd868b067c20750d8c\");\n",
+       "    if (outputDiv.id !== \"altair-viz-3c8e62781515412988385ff6c89869e0\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-3c8e62781515412988385ff6c89869e0\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -409,7 +409,7 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"layer\": [{\"mark\": \"point\", \"encoding\": {\"color\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}, {\"field\": \"epitope\", \"type\": \"nominal\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}}, {\"mark\": {\"type\": \"line\", \"size\": 2.5}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}, {\"field\": \"epitope\", \"type\": \"nominal\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"title\": \"inferred vs. true mutation escape values\", \"transform\": [{\"loess\": \"correlation (R^2)\", \"on\": \"num_variants\", \"groupby\": [\"epitope\"]}]}], \"data\": {\"name\": \"data-f909267d39dc8ae87776eccb431afdd6\"}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.2.0.json\", \"datasets\": {\"data-f909267d39dc8ae87776eccb431afdd6\": [{\"epitope\": \"class 1\", \"correlation (R^2)\": 0.004160386828315953, \"num_variants\": \"1000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.23074899561007087, \"num_variants\": \"1000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 5.210780287961313e-05, \"num_variants\": \"1000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.0026171007181160564, \"num_variants\": \"2500\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.4825024560079689, \"num_variants\": \"2500\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.13877610854293096, \"num_variants\": \"2500\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.00044986614810224015, \"num_variants\": \"5000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.582173879243815, \"num_variants\": \"5000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.4091510973303043, \"num_variants\": \"5000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.0678479001502133, \"num_variants\": \"10000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.7602255073934263, \"num_variants\": \"10000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.5025351603948732, \"num_variants\": \"10000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6536110842759627, \"num_variants\": \"20000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9259730738439577, \"num_variants\": \"20000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.8526740022714216, \"num_variants\": \"20000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.72307030752994, \"num_variants\": \"30000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9436839654467967, \"num_variants\": \"30000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.8932069258207216, \"num_variants\": \"30000\"}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"layer\": [{\"mark\": \"point\", \"encoding\": {\"color\": {\"field\": \"epitope\", \"scale\": {\"range\": [\"#1f77b4\", \"#ff7f0e\", \"#2ca02c\"]}, \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}, {\"field\": \"epitope\", \"type\": \"nominal\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}}, {\"mark\": {\"type\": \"line\", \"size\": 2.5}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"scale\": {\"range\": [\"#1f77b4\", \"#ff7f0e\", \"#2ca02c\"]}, \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}, {\"field\": \"epitope\", \"type\": \"nominal\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"title\": \"inferred vs. true mutation escape values\", \"transform\": [{\"loess\": \"correlation (R^2)\", \"on\": \"num_variants\", \"groupby\": [\"epitope\"]}]}], \"data\": {\"name\": \"data-f909267d39dc8ae87776eccb431afdd6\"}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.2.0.json\", \"datasets\": {\"data-f909267d39dc8ae87776eccb431afdd6\": [{\"epitope\": \"class 1\", \"correlation (R^2)\": 0.004160386828315953, \"num_variants\": \"1000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.23074899561007087, \"num_variants\": \"1000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 5.210780287961313e-05, \"num_variants\": \"1000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.0026171007181160564, \"num_variants\": \"2500\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.4825024560079689, \"num_variants\": \"2500\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.13877610854293096, \"num_variants\": \"2500\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.00044986614810224015, \"num_variants\": \"5000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.582173879243815, \"num_variants\": \"5000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.4091510973303043, \"num_variants\": \"5000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.0678479001502133, \"num_variants\": \"10000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.7602255073934263, \"num_variants\": \"10000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.5025351603948732, \"num_variants\": \"10000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6536110842759627, \"num_variants\": \"20000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9259730738439577, \"num_variants\": \"20000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.8526740022714216, \"num_variants\": \"20000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.72307030752994, \"num_variants\": \"30000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9436839654467967, \"num_variants\": \"30000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.8932069258207216, \"num_variants\": \"30000\"}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
@@ -429,7 +429,7 @@
     "    .encode(\n",
     "        alt.X(\"num_variants:Q\"),\n",
     "        alt.Y(\"correlation (R^2):Q\"),\n",
-    "        alt.Color(\"epitope:N\"),\n",
+    "        alt.Color(\"epitope:N\", scale=alt.Scale(range=['#1f77b4', '#ff7f0e', '#2ca02c'])),\n",
     "        tooltip=[\n",
     "            \"num_variants\",\n",
     "            alt.Tooltip(\"correlation (R^2)\", format=\".3f\"),\n",
@@ -514,13 +514,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-4ed10bfa24394a9a896292364e2b761e\"></div>\n",
+       "<div id=\"altair-viz-bb4a221c64bc423296094252a12dfb56\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-4ed10bfa24394a9a896292364e2b761e\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-4ed10bfa24394a9a896292364e2b761e\");\n",
+       "    if (outputDiv.id !== \"altair-viz-bb4a221c64bc423296094252a12dfb56\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-bb4a221c64bc423296094252a12dfb56\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
