--- a/notebooks/library_size.ipynb
+++ b/notebooks/library_size.ipynb
@@ -429,7 +429,9 @@
     "    .encode(\n",
     "        alt.X(\"num_variants:Q\"),\n",
     "        alt.Y(\"correlation (R^2):Q\"),\n",
-    "        alt.Color(\"epitope:N\", scale=alt.Scale(range=['#1f77b4', '#ff7f0e', '#2ca02c'])),\n",
+    "        alt.Color(\n",
+    "            \"epitope:N\", scale=alt.Scale(range=[\"#1f77b4\", \"#ff7f0e\", \"#2ca02c\"])\n",
+    "        ),\n",
     "        tooltip=[\n",
     "            \"num_variants\",\n",
     "            alt.Tooltip(\"correlation (R^2)\", format=\".3f\"),\n",
