--- a/notebooks/fit_RBD.ipynb
+++ b/notebooks/fit_RBD.ipynb
@@ -506,22 +506,29 @@
     "activity_wt_comparison = (\n",
     "    pd.concat(\n",
     "        [\n",
-    "            poly_abs.activity_wt_df.rename(columns={'activity':'predicted'}), \n",
-    "             true_activities.rename(columns={'activity':'actual'}).drop(columns='epitope')\n",
-    "        ], \n",
-    "    axis=1)\n",
-    ").melt(id_vars=['epitope'], value_vars=['actual', 'predicted'], var_name='value_type', value_name='wildtype activity')\n",
+    "            poly_abs.activity_wt_df.rename(columns={\"activity\": \"predicted\"}),\n",
+    "            true_activities.rename(columns={\"activity\": \"actual\"}).drop(\n",
+    "                columns=\"epitope\"\n",
+    "            ),\n",
+    "        ],\n",
+    "        axis=1,\n",
+    "    )\n",
+    ").melt(\n",
+    "    id_vars=[\"epitope\"],\n",
+    "    value_vars=[\"actual\", \"predicted\"],\n",
+    "    var_name=\"value_type\",\n",
+    "    value_name=\"wildtype activity\",\n",
+    ")\n",
     "\n",
     "alt.Chart(activity_wt_comparison).mark_bar(size=35).encode(\n",
-    "    x='value_type:O',\n",
-    "    y='wildtype activity:Q',\n",
-    "    color=alt.Color('epitope:N', scale=alt.Scale(range=['#1f77b4', '#ff7f0e', '#2ca02c'])),\n",
-    "    column='epitope:N',\n",
-    "    tooltip=['value_type', alt.Tooltip('wildtype activity', format=\".3f\"), 'epitope']\n",
-    ").properties(\n",
-    "    width=100,\n",
-    "    height=125\n",
-    ")"
+    "    x=\"value_type:O\",\n",
+    "    y=\"wildtype activity:Q\",\n",
+    "    color=alt.Color(\n",
+    "        \"epitope:N\", scale=alt.Scale(range=[\"#1f77b4\", \"#ff7f0e\", \"#2ca02c\"])\n",
+    "    ),\n",
+    "    column=\"epitope:N\",\n",
+    "    tooltip=[\"value_type\", alt.Tooltip(\"wildtype activity\", format=\".3f\"), \"epitope\"],\n",
+    ").properties(width=100, height=125)"
    ]
   },
   {
@@ -790,7 +797,7 @@
     ")\n",
     "\n",
     "_ = ic90_corr_plot.draw()\n",
-    "#ic90_corr_plot.save('IC90_pred_vs_actual.pdf', height=3.5, width=3.5)"
+    "# ic90_corr_plot.save('IC90_pred_vs_actual.pdf', height=3.5, width=3.5)"
    ]
   },
   {
@@ -907,7 +914,7 @@
     ")\n",
     "\n",
     "_ = pv_corr_plot.draw()\n",
-    "#pv_corr_plot.save('pv_pred_vs_actual.pdf', height=3.5, width=10.5)"
+    "# pv_corr_plot.save('pv_pred_vs_actual.pdf', height=3.5, width=10.5)"
    ]
   },
   {
@@ -1104,7 +1111,9 @@
     "    .encode(\n",
     "        x=\"escape\",\n",
     "        y=\"predicted escape\",\n",
-    "        color=alt.Color(\"epitope\", scale=alt.Scale(range=['#1f77b4', '#ff7f0e', '#2ca02c'])),\n",
+    "        color=alt.Color(\n",
+    "            \"epitope\", scale=alt.Scale(range=[\"#1f77b4\", \"#ff7f0e\", \"#2ca02c\"])\n",
+    "        ),\n",
     "        tooltip=[\"mutation\", \"epitope\"],\n",
     "    )\n",
     "    .mark_point(opacity=0.5)\n",
