--- a/notebooks/mutation_rate.ipynb
+++ b/notebooks/mutation_rate.ipynb
@@ -449,7 +449,9 @@
     "    y=\"correlation (R^2):Q\",\n",
     "    column=\"epitope:N\",\n",
     "    tooltip=[\"mutation_rate\", alt.Tooltip(\"correlation (R^2)\", format=\".3f\")],\n",
-    "    color=alt.Color(\"epitope\", scale=alt.Scale(range=['#1f77b4', '#ff7f0e', '#2ca02c']), legend=None),\n",
+    "    color=alt.Color(\n",
+    "        \"epitope\", scale=alt.Scale(range=[\"#1f77b4\", \"#ff7f0e\", \"#2ca02c\"]), legend=None\n",
+    "    ),\n",
     ").properties(width=200, height=200, title=\"inferred vs. true mutation escape values\")"
    ]
   },
